--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: lcmsfishdata
-Title: A Collection of (Semi)Processed LCMS Data Tables
+Title: A Collection of (Semi)Processed LUMA Peaklists
 Version: 0.0.0.9000
 Authors@R: person("Jonathan","Mosley",comment = c(ORCID = "0000-0002-9300-6924"), 
                email = "mosley.jonathan@epa.gov", role = c("aut","cre"))
-Description: A collection of LCMS data tables in various stages of processing for the purposes 
+Description: A collection of Peaklists in various stages of processing for the purposes 
   of illustrating LUMA functions.
 Depends: R (>= 2.10)
 License: CC0
